fixing the weird height/width issues on mobile

--- a/src/app/components/side_menu/side_menu.less
+++ b/src/app/components/side_menu/side_menu.less
@@ -2,11 +2,11 @@
 @import '../../../public/less/common';
 
 .side-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
+  bottom: 0;
   z-index: -1;
   width: 300px;
-  height: calc(100vh);
   transform: translate3d(-310px, 0, 0);
   transition: transform 0.25s ease-out;
   background-color: @backgroundColour;
